# functional_safety

./: .gitignore  TODO_list.txt  architettura.txt  exec.sh  funzionamento_bridge.txt  macchina_a_stati.txt  run.sh
docker_ws/: Dockerfile.functional_safety  build_functional_safety.sh
ros_ws/src/robot_bridge/: package.xml  setup.py
ros_ws/src/robot_bridge/config/: bridge.yaml  robot.yaml
ros_ws/src/robot_bridge/launch/: test.launch.py
ros_ws/src/robot_bridge/robot_bridge/: Bridge.py  Joint.py  Robot.py
ros_ws/src/safe_controller/: package.xml  setup.py
ros_ws/src/safe_controller/safe_controller/: CollisionPublisher.py  Logger.py  SafeController.py  TrajectorySender.py
ros_ws/src/safety_interface/: CMakeLists.txt  package.xml
ros_ws/src/safety_manager/: CMakeLists.txt  package.xml  plugins.xml
ros_ws/src/safety_manager/include/safety_manager/: SafetyTools.hpp  safety_states.hpp
ros_ws/src/safety_manager/src/: HGMode.cpp  PFLMode.cpp  SRSMode.cpp  SSMMode.cpp  SateMachine.cpp  StateMachine.cpp  plugins.xml
ros_ws/src/safety_msgs/: CMakeLists.txt  package.xml
ros_ws/src/safety_msgs/action/: PowerForceLimiting.action
ros_ws/src/safety_msgs/msg/: Control.msg  OperatorState.msg  Positions.msg  Robotstate.msg  SSM.msg  SafetyMonitorData.msg  SafetyParams.msg
ros_ws/src/safety_msgs/srv/: HandGuided.srv  PowerForceLimiting.srv  SafetyRatedStop.srv
